--- a/compositional_skills/writing/freeform/poetry/proverb/qna.yaml
+++ b/compositional_skills/writing/freeform/poetry/proverb/qna.yaml
@@ -9,8 +9,10 @@ seed_examples:
      Conjures up an image of a fisherman with what they think is a great big salmon at the end of their line.
      However, when they get it out of the water they realise that it is actually a kettle'
   question: Give me an example of an Irish proverb about finishing a task
-- answer: 'Ní neart go cur le chéile.
-     Translation: "There is no strength without unity."
-     This proverb can be interpreted as emphasizing the importance of teamwork and collaboration in accomplishing tasks or goals.'
+- answer: |
+     'Ní neart go cur le chéile.
+     Translation: "There is no strength without unity."/n
+     This proverb can be interpreted as emphasizing the importance of teamwork
+     /nand collaboration in accomplishing tasks or goals.'
   question: Give me an example of an Irish proverb about getting work done
-task_description: ''
+task_description: 'this adds examples of Irish proverbs for getting work done'
